--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "start": "node bot.js"
     },
     "dependencies": {
-        "discord.js": "^13.1.0",
-        "dotenv": "^10.0.0",
-        "easy-json-database": "^1.5.0"
+        "discord.js": "^14.1.0",
+        "dotenv": "^10.0.0"
     }
 }
